# era-compiler-llvm-builder

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.github/: pull_request_template.md
.github/actions/build_and_test/: action.yml
.github/actions/prepare-msys/: action.yml
.github/workflows/: build-and-test.yaml  vaildate-pr.yaml  validate-pr.yaml
src/: build_type.rs  ccache_variant.rs  lib.rs  llvm_path.rs  llvm_project.rs  lock.rs  sanitizer.rs  target_env.rs  target_triple.rs  utils.rs
src/tests/: build.rs  checkout.rs  clean.rs  clone.rs  invalid_invocation.rs  mod.rs  version.rs
src/tests/common/: mod.rs
src/zkevm_llvm/: arguments.rs  main.rs
src/zkevm_llvm_builder/: arguments.rs  main.rs
src/zksync_llvm/: arguments.rs  main.rs
tests/: build.rs  checkout.rs  clean.rs  clone.rs  invalid_invocation.rs  version.rs
tests/common/: mod.rs
tests/constants/: mod.rs
