[package]
name = "compiler-llvm-builder"
version = "1.0.28"
authors = [
    "Oleksandr Zarudnyi <a.zarudnyy@matterlabs.dev>",
    "Anton Baliasnikov <aba@matterlabs.dev>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "ZKsync LLVM Framework Builder"
repository = "https://github.com/matter-labs/era-compiler-llvm-builder"

[[bin]]
name = "zksync-llvm"
path = "src/zksync_llvm/main.rs"

[lib]
doctest = false

[dependencies]
structopt = { version = "0.3", default-features = false }
anyhow = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.7"
num_cpus = "1.15"
fs_extra = "1.2"
path-slash = "0.2"
regex = "1.10"
downloader = "0.2"
tar = "0.4"
flate2 = "1.0"
http = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
assert_fs = "1.1"
rstest = "0.18"
