[package]
name = "compiler-llvm-builder"
version = "1.0.37"
authors = [
    "Oleksandr Zarudnyi <a.zarudnyy@matterlabs.dev>",
    "Anton Baliasnikov <aba@matterlabs.dev>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "ZKsync LLVM Framework Builder"
repository = "https://github.com/matter-labs/era-compiler-llvm-builder"

[[bin]]
name = "zksync-llvm"
path = "src/zksync_llvm/main.rs"

[lib]
doctest = false

[dependencies]
clap = { version = "=4.5.21", features = ["derive"] }
anyhow = "=1.0.89"
serde = { version = "=1.0.210", features = [ "derive" ] }
toml = "=0.8.19"
num_cpus = "=1.16.0"
fs_extra = "=1.3.0"
path-slash = "=0.2.1"
regex = "=1.11.1"
downloader = "=0.2.8"
tar = "=0.4.43"
flate2 = "=1.0.35"
http = "=1.1.0"

[dev-dependencies]
assert_cmd = "=2.0.16"
predicates = "=3.1.2"
assert_fs = "=1.1.2"
rstest = "=0.23.0"
